--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -15,7 +15,7 @@
         </ul>
     </div>
 </nav> -->
-<nav class="navbar"  *ngIf="userService.user$ | async">
+<!-- <nav class="navbar"  *ngIf="userService.user$ | async">
     <div class="container">
         <div class="logo">
             Angular Chat App
@@ -26,7 +26,7 @@
             <li><a (click)="logout()">Logout</a></li>
         </ul>
     </div>
-</nav>
+</nav> -->
 <div class="MainContainer">
     <router-outlet></router-outlet>
 </div>
