--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,18 +1,38 @@
-<form #loginForm="ngForm" (ngSubmit)="login()">
-    <div class="row">
-        <div class="col-sm-12 form-group">
-            <label>User Name</label>
-            <input type="text" class="form-control" name="username" [(ngModel)]="userName" #username="ngModel" required>
-            <div *ngIf="username.touched && username?.errors?.required" class="error-message">
-                The user name is required.
+<mat-grid-list cols="1" rows="1" rowHeight="2:1">
+  <mat-grid-tile>
+    <mat-card class="example-card">
+      <div class="logo"><i class="fa fa-comments" aria-hidden="true"></i></div>
+      <mat-card-header>
+        <mat-card-title>ChatO Member Login</mat-card-title>
+      </mat-card-header>
+
+      <mat-card-content>
+        <form #loginForm="ngForm" (ngSubmit)="login()">
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12  form-group">
+              <mat-form-field appearance="standard" class="fit-size">
+                <mat-label>User Name</mat-label>
+                <input matInput placeholder="User Name" type="text" [(ngModel)]="userName" #username="ngModel" required
+                  [ngModelOptions]="{standalone: true}">
+                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-error *ngIf="username.touched && username?.errors?.required">The user name is required.</mat-error>
+              </mat-form-field>
             </div>
-        </div>
-    </div>
-    <br>
-    <div class="row">
-        <div class="col-sm-12 form-group">
-            <!-- <button color="primary" type="submit" [disabled]="!loginForm.form.valid">Submit</button> -->
-            <button mat-raised-button color="primary"  type="submit" [disabled]="!loginForm.form.valid">Submit</button>
-        </div>
-    </div>
-</form>
+          </div>
+          <br>
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group">
+              <button mat-raised-button color="primary" type="submit" class="fit-size"
+                [disabled]="!loginForm.form.valid">Log In</button>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-12 form-group">
+             <p class="register-hint">Not a member? <a>Register Here</a></p>
+            </div>
+          </div>
+        </form>
+      </mat-card-content>
+    </mat-card>
+  </mat-grid-tile>
+</mat-grid-list>
