--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -47,3 +47,12 @@ form{
 .addClass{
     margin-left: 32px;
 }
+
+
+
+.example-container {
+    width: 400px;
+    height: 200px;
+    margin: 10px;
+    border: 1px solid #555;
+  }
