--- a/src/app/users/users.component.scss
+++ b/src/app/users/users.component.scss
@@ -1,13 +1,16 @@
-.body-container{
+.body-container {
     display: flex;
     flex-wrap: nowrap;
 }
-.body-container div:first-child{
+
+.body-container div:first-child {
     width: 52%;
 }
-.body-container div:last-child{
+
+.body-container div:last-child {
     width: 40%;
 }
+
 table {
     width: 100%;
 }
@@ -16,43 +19,113 @@ th.mat-sort-header-sorted {
     color: black;
 }
 
-th.mat-header-cell{
-    font-weight: bold!important;
-    color: black!important;
+th.mat-header-cell {
+    font-weight: bold !important;
+    color: black !important;
 }
-table{
+
+table {
     margin: 2% 2%;
     width: 45%;
     background: lightyellow;
     position: absolute;
 }
 
-th,td{
-    font-size: 20px!important;
+th,
+td {
+    font-size: 20px !important;
 }
 
-form{
-    padding: 10px 1px 10px 1px!important;
+form {
+    padding: 10px 1px 10px 1px !important;
 }
 
-.mat-dialog-content{
-    border: 1px solid!important;
-    margin: 0px 1px 0px 1px!important;
+.mat-dialog-content {
+    border: 1px solid !important;
+    margin: 0px 1px 0px 1px !important;
 }
 
-.error-message{
+.error-message {
     color: red;
 }
 
-.addClass{
+.addClass {
     margin-left: 32px;
 }
 
 
 
-.example-container {
-    width: 400px;
-    height: 200px;
-    margin: 10px;
-    border: 1px solid #555;
-  }
+.main-container {
+    width: 100%;
+    height: 100vh;
+    background: white;
+}
+
+.drawer {
+    transform: none;
+    visibility: visible;
+    width: 25%;
+    background: #a1c3ff !important;
+}
+
+.profile-container {
+    display: flex;
+    border: 1px solid red;
+    margin: 5px;
+}
+
+.inner-details {
+    border: 1px solid beige;
+    margin: 5px 5px 5px 15px;
+}
+
+.user-name {
+    font-size: 1.3rem;
+}
+
+.user-status {
+    font-size: 0.8rem;
+    color: darkgreen;
+}
+
+.user-menu {
+    margin-left: auto;
+}
+
+.member-container {
+    border: 1px solid red;
+    margin: 5px;
+}
+
+.member-details {
+    display: flex;
+    padding: 10px;
+}
+
+.member-holder:hover {
+    background: #2c8de2;
+}
+
+.member-subdetails {
+    border: 1px solid beige;
+    margin: 5px 5px 5px 15px;
+}
+
+.member-name {
+    font-size: 1rem;
+    font-weight: 500;
+}
+
+.member-status {
+    font-size: 0.8rem;
+    color: #f4f4ff;
+    font-weight: 500;
+}
+
+hr:not([size]) {
+     height: 0px!important;
+}
+
+hr{
+    margin: 0!important;
+}
